// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default options 1`] = `
"declare namespace ExampleCssModule {
  export interface IExampleCss {
    \\"bar-baz\\": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssModule.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssModule.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`localsConvention asIs 1`] = `
"declare namespace ExampleCssModule {
  export interface IExampleCss {
    \\"bar-baz\\": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssModule.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssModule.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`localsConvention camelCase 1`] = `
"declare namespace ExampleCssModule {
  export interface IExampleCss {
    \\"bar-baz\\": string;
    barBaz: string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssModule.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssModule.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`with banner 1`] = `
"// autogenerated by typings-for-css-modules-loader
declare namespace ExampleCssModule {
  export interface IExampleCss {
    \\"bar-baz\\": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssModule.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssModule.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`with locals export disabled 1`] = `
"declare namespace ExampleCssModule {
  export interface IExampleCss {
    \\"bar-baz\\": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssModule.IExampleCss;

export = ExampleCssModule;
"
`;

exports[`with no formatter 1`] = `
"declare namespace ExampleCssModule {
  export interface IExampleCss {
    'bar-baz': string;
    'composed': string;
    'foo': string;
  }
}

declare const ExampleCssModule: ExampleCssModule.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssModule.IExampleCss;
};

export = ExampleCssModule;"
`;

exports[`with prettier 1`] = `
"declare namespace ExampleCssModule {
  export interface IExampleCss {
    \\"bar-baz\\": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssModule.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssModule.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`with sourcemap 1`] = `
"declare namespace ExampleCssModule {
  export interface IExampleCss {
    \\"bar-baz\\": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssModule.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssModule.IExampleCss;
};

export = ExampleCssModule;
"
`;
